plugins {
    id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
    id 'maven-publish'
}

base {
    archivesName = project.archives_base_name
}

repositories {
    mavenCentral()
}

loom {
    accessWidenerPath = file("src/main/resources/glacier-ltw.accesswidener")

    runs {
        client {
            vmArgs "--enable-preview", "--enable-native-access=ALL-UNNAMED"
        }
        server {
            vmArgs "--enable-preview", "--enable-native-access=ALL-UNNAMED"
        }
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.officialMojangMappings()
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
}

processResources {
    def version = project.version
    inputs.property "version", version
    filesMatching("fabric.mod.json") {
        expand "version": version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
    it.options.compilerArgs << "--enable-preview"
}

java {
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    def projectName = project.name
    inputs.property "projectName", projectName
    from("LICENSE") {
        rename { "${it}_${projectName}" }
    }
}

publishing {
    publications {
        create("mavenJava", MavenPublication) {
            from components.java
        }
    }
    repositories { }
}
